Fixed bugs in tasks page where task were not showing up due to async and await

--- a/public/style.css
+++ b/public/style.css
@@ -70,13 +70,14 @@ body::-webkit-scrollbar-thumb:hover {
 .nav a:hover{
     transition: all 0.3s ease-in-out;
     color: rgb(189, 189, 189);
-    transform: rotate(366deg);
-    font-size: 22px;
+    /* transform: rotate(366deg); */
+    /* font-size: 22px; */
     padding: 5px;
 }
 
 .nav li{
     margin-left: 25px;
+    font-size: 1.5rem;
 }
 
 
@@ -84,14 +85,26 @@ body::-webkit-scrollbar-thumb:hover {
     display: block;
     align-items: center;
     color:#fff;
+    cursor: pointer;
 }
 
-.nav ion-icon:hover{
+.nav #sun:hover{
     animation-name: sun;
     animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
     animation-timing-function: ease-in-out;
+}
+
+.nav #out
+{
+    transition: 0.5s;
+}
+
+.nav #out:hover
+{
+    transition: 0.5s;
+    color: red;
 }
 
 @keyframes sun{
